--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
 <div class="skinny_wrapper wrapper_padding">
+  <br>
+  <i>Note: When you start an article not associated with a pitch, you run the risk of your article not being approved because it doesn't match the kind of content published on The Teen Magazine. Please make sure that your article idea fits into one of our existing categories and is relevant to our teenage audience or claim an article pitch <%= link_to("here", pitches_path, target: "_blank")%>.</i>
   <%= render 'form' %>
 </div>
