--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -27,15 +27,15 @@
       <a href="/categories/entertainment">Entertainment</a>
       <a href="/categories/personal-stories">Personal Stories</a>
       <a href="/contacts/new">Contact</a>
-      <% if current_user && (current_user.admin? || current_user.editor?) %>
-        <%= link_to "Writers", users_path %>
-        <%= link_to "Editing", reviews_path %>
-      <% end %>
       <% if user_signed_in? %>
-         <%= link_to "Pitches", pitches_path %>
+         <%= link_to "Create", pitches_path %>
+         <% if current_user && (current_user.admin? || current_user.editor?) %>
+           <%= link_to "Edit", reviews_path %>
+           <%= link_to "Writers", users_path %>
+         <% end %>
          <%= link_to "Dashboard", user_path(current_user) %>
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-     <% else %>
+      <% else %>
          <a href="/apply">Apply</a>
       <% end %>
       <div style="height: 2000px; background-color: #65B19D;">
@@ -65,16 +65,17 @@
           </div>
         </div>
         <div class="border" style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;">
-          <div class="skinny_wrapper">
+          <div class="nav_wrapper">
             <nav class="nav_article">
               <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
-              <% if current_user && (current_user.admin? || current_user.editor?) %>
-                <%= link_to "Writers", users_path, class: "link" %>
-                <%= link_to "Editing", reviews_path, class: "link" %>
-              <% end %>
               <% if user_signed_in? %>
-                <%= link_to "Pitches", pitches_path, class: "link" %>
-                <%= link_to "Dashboard", user_path(current_user), class: "link" %>
+                 <%= link_to "Create", pitches_path, class: "link" %>
+                 <% if current_user && (current_user.admin? || current_user.editor?) %>
+                   <%= link_to "Edit", reviews_path, class: "link" %>
+                   <%= link_to "Writers", users_path, class: "link" %>
+                 <% end %>
+                 <%= link_to "Dashboard", user_path(current_user), class: "link" %>
+                 <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
               <% else %>
                   <a class="link" href="/contacts/new">Contact</a>
                   <a class="link" href="/apply">Apply</a>
